--- a/2_zundel_cation/01_training_data_generation/config.yaml
+++ b/2_zundel_cation/01_training_data_generation/config.yaml
@@ -1,6 +1,6 @@
 dataset_fn: 'h5o2+.h5'
 P: 64
-root_location: ./example_setup/
+root_location: .
 system: 'h5o2+'
 init_file : ./example_setup/init.xyz
 temp_folders: ['0100','0300']
@@ -10,8 +10,8 @@ data_dict: {pos: [simulation.pos, 'coordinates'],
             fsp:  [simulation.fsp, 'forces']}
 first_frame: 250
 last_frame:  50250
-add_spring_energy: True
-add_potential_energy: True
-recompute_spring_energy: True
+add_spring_energy: False
+add_potential_energy: False
+recompute_spring_energy: False
 potential_energy_file: 'simulation.out'
 spring_energy_file: null
