--- a/2_zundel_cation/04_model_evaluation/analysis/example_setup/analysis_config.yaml
+++ b/2_zundel_cation/04_model_evaluation/analysis/example_setup/analysis_config.yaml
@@ -1,3 +1,3 @@
 output_file: features.npz
-position_file: ../modeling/simulation.pos_0.xyz
+position_file: ../../modeling/example_setup/simulation.pos_0.xyz
 system: zundel_cat
